alarm.java update