@@ -2,6 +2,9 @@ package nachos.threads;
 
 
 
+
+import java.util.List;
+
 import nachos.machine.*;
 
 /**
@@ -49,7 +52,8 @@ public class Condition2 {
     public void wake() {
 	Lib.assertTrue(conditionLock.isHeldByCurrentThread());
 	boolean interruptStatus = Machine.interrupt().disable(); 
-	KThread waked_thread = zzzQueue.removeFirst(); 
+	KThread waked_thread; 
+	waked_thread = zzzQueue.remove(0);    	
 	waked_thread.ready();
 	Machine.interrupt().restore(interruptStatus);
     }
@@ -60,11 +64,11 @@ public class Condition2 {
      */
     public void wakeAll() {
 	Lib.assertTrue(conditionLock.isHeldByCurrentThread());
-	zzzQueue.equals(null)
+	zzzQueue.equals(null); 
 	
     }
 
     private Lock conditionLock;
-    private SynchList zzzQueue; 
+    private List<KThread> zzzQueue; 
     
 }
